# ProjExper

Database/CA2/: ASM.py  ASMgrammar - Chinese Ver.md  ASMgrammar.md  BPlusTree.py  Btree.py  Data.py  Data2.py  Part1&2.pptx  Part3.pptx  Part4&5.pptx  Q2Test.py  Q3Test.py  Readme.md  SequentialBlocks.py  database.py  queue.py  schema.py  testDataBase.py
Graphics/: README.md
Graphics/PathTracing_CornellBox/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Material.hpp  Object.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  global.hpp
Graphics/PathTracing_CornellBox/images/: binary_200x200_spp64.ppm  binary_300x300_spp1024.ppm  binary_784x784_spp1024_thread4.ppm  binary_784x784_spp1600_thread8.ppm  binary_784x784_spp32.ppm  binary_84x84_spp64_thread4.ppm  ppm.py
Graphics/Rasterization_Cow/: CMakeLists.txt  Shader.hpp  Texture.cpp  Texture.hpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Graphics/WhittedStyleRT_Geometry/: CMakeLists.txt  Light.hpp  Object.hpp  Renderer.cpp  Renderer.hpp  Scene.hpp  Sphere.hpp  Triangle.hpp  global.hpp  main.cpp
